# ai-catchup

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
aicatchup/: __init__.py  cli.py  config.py  dedup.py  digest.py  graph.py  judge.py  knowledge.py  notify.py  ollama_client.py  signals.py  sources.py  summarize.py  tts.py
tests/: test_pipeline_units.py
