[project]
name = "ai-catchup"
version = "0.1.0"
description = "Zero-cost, local-first AI news radar: parallel multi-source collection, embedding knowledge base, and LLM-ranked 'fastest & most useful right now' digest."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "defusedxml>=0.7",
    "numpy>=1.26",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0"]
tts = ["edge-tts>=7.0"]  # voice digest (free MS neural TTS, no API key)

[project.scripts]
aicatchup = "aicatchup.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aicatchup*"]

[tool.ruff]
line-length = 100
target-version = "py311"
